# game

./: .gitignore  CMakeLists.txt  README.md  auto_impl.ps1  batch_impl.ps1  build.sh  check_act.ps1  check_cpp.ps1  check_log.ps1  check_unknown.ps1  convert_test.ps1  extract.ps1  extract_festival.ps1  extract_stubs.ps1  fix_30.ps1  fix_activity.ps1  fix_activity2.ps1  fix_cfgdata.py  fix_fwd_decls.ps1  fix_log.ps1  fix_log2.ps1  fix_log3.ps1  fix_remaining.ps1  fix_unknown.ps1  fix_virtual.ps1  gameserver_impl.ps1  gen_headers.ps1  gen_headers2.ps1  impl_batch.ps1  impl_bossdist.ps1  index_gs.ps1  onefile_impl.ps1  test_impl.ps1  tmp_cronghe.txt  tmp_csuper.txt  tmp_ctouzi.txt  tmp_ctreasure.txt  tmp_fix_all.py  tmp_fix_arrow.py  tmp_fix_gameservice.py  (+6 more)
extracted/: extract.ps1
include/: CRandom.h  common.h
include/Activity/: CActivity.h  CActivityManager.h  CActivityMap.h  CActivityWorldBoss.h  CCampWar.h  CCityWar.h  CDaTiHD.h  CFamilyWar.h  CFestivalActivity.h  CFestivalDoubleEleven.h  CHorseRacing.h  CKaiFuBoss.h  CKiaFuRecharge.h  CMoLingRuQin.h  COpenBeta.h  CPeerlessWar.h  CRefreshMonster.h  CTianJiangBaoXiang.h  CUniteServer.h  CWorldBoss.h  CZongHeYunYingHD.h  CrossTower.h  DailyActivity.h  DailyActivityData.h  MonsterActivity.h  NpcActivity.h  PlantActivity.h
include/Answer/: DayTime.h  Inifile.h  Logger.h  MD5.h  Mutex.h  MySqlDBGuard.h  MySqlQuery.h  NetPacket.h  Singleton.h  StringUtility.h
include/Character/: CChrDepot.h  CEquipManager.h  CExtCharAuction.h  CExtCharBag.h  CExtCharCarrier.h  CExtCharDepot.h  CExtCharDepotManager.h  CExtCharDraw.h  (+31 more)
(+1282 files in other folders)
